# hubspot-mcp-server

./: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  pyproject.toml  server.json
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py
src/hubspot_mcp/: server.py
tests/: __init__.py  test_server.py  test_simple.py
