[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubspot-mcp-server"
version = "0.1.1"
description = "MCP server for HubSpot API integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "asklokesh", email = "lokeshmure@live.com" }
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pytest-mock>=3.12.0"
]

[project.scripts]
hubspot-mcp = "hubspot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hubspot_mcp"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=hubspot_mcp --cov-report=term-missing"
